@@ -27,9 +27,11 @@ SIGNATURE
 t/Map-Tube-Tbilisi/01-use.t
 t/Map-Tube-Tbilisi/02-version.t
 t/Map-Tube-Tbilisi/03-map.t
-t/Map-Tube-Tbilisi/04-get_shortest_route.t
-t/Map-Tube-Tbilisi/05-name.t
-t/Map-Tube-Tbilisi/06-xml.t
+t/Map-Tube-Tbilisi/04-get_node_by_id.t
+t/Map-Tube-Tbilisi/05-get_node_by_name.t
+t/Map-Tube-Tbilisi/06-get_shortest_route.t
+t/Map-Tube-Tbilisi/07-name.t
+t/Map-Tube-Tbilisi/08-xml.t
 Tbilisi.pm
 xt/Map-Tube-Tbilisi/01-pod_coverage.t
 xt/Map-Tube-Tbilisi/02-pod.t
